tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:20:35:
unexpected undefined
expecting ), comma, or rest of range
            matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`))] of int(0..3)
                                      ^